# tauri-react-graphql-template

./: .gitignore  package.json
src/: App.tsx  GraphQlProvider.tsx  index.tsx
src-tauri/: Cargo.toml
src-tauri/src/: build.rs  main.rs
src-tauri/src/graphql/: mod.rs  schema.rs
src/graphql/: index.tsx
