[package]
authors     = ["you"]
build       = "src/build.rs"
default-run = "app"
description = "A Tauri App"
edition     = "2018"
license     = ""
name        = "app"
repository  = ""
version     = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
async-graphql = "2.10.3"
once_cell     = "1.8.0"
tauri-build   = { version = "1.0.0-beta.4" }

[dependencies]
async-graphql = "2.10.3"
once_cell     = "1.8.0"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
tauri         = { version = "1.0.0-beta.8", features = ["api-all"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
default         = ["custom-protocol"]
